# bible-ai

./: .gitignore  architecture.docx  pyproject.toml
backend/: db_session.py  llm_client.py  main.py  server.py
backend/ai/: agent.py  agent_tools.py  graph.py  llm_client.py  model.py  schema.py
backend/ai/prompts/: bible_qa.py
backend/ai/services/: qa_service.py
backend/ai/tools/: schema.py  scripture_tool.py
backend/api/routers/: __init__.py  bible.py  chat.py
backend/schemas/: chat.py  models.py
backend/services/: scripture_service.py  sql_model.py  sql_service.py
etl/: etl.py
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
